# codeseeker

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  get_medical_abbreviations.sh  pyproject.toml
data/mdace/: README.md
data/meddec/splits/: train.txt  val.txt
examples/: async_requests.py  compute_negatives.py  dataloader.py  hf_datasets_map.py  identify_multi_notes.py  index_validation.py  load_data.py  load_paternity_notes.py  mimic_exploration.py  prompt_poet_exp.py  umls_lexicon.py  umls_search.py  weave_exp.py  weave_tutorial.py
experiments/: 0_search_terms.py  1_analyse_agent.py  2_locate_agent.py  3_verify_agent.py  4_assign_agent.py  benchmark.py  config.py  incite_replication.py  run_grpo_unsloth.py  run_training.py  run_unsloth.py  utils.py
reports/: alignment_benchmark.ipynb  icd10cm_mdace.ipynb  mdace_test.ipynb  prompt_engineering copy.ipynb  retriever_analysis.ipynb  segmenter_exps.ipynb  small_benchmark.ipynb  task_experiments.ipynb  uncertainty.ipynb
reports/data/: alignment_benchmark_runs.csv  prompt_engineering_runs.csv  segmentation_experiments.csv  small-benchmark.csv  task_experiments.csv
scripts/: compare_segmenters.py  compute_code_similarities.py  compute_negatives.py  gen_synthetic_labels.py  merge_dataset_splits.py  merge_peft.py  prefix_caching.py  spawn_vllms.py  train_alignment.py
src/agents/: analyse_agent.py  assign_agent.py  base.py  errors.py  locate_agent.py  models.py  ops.py  search_agent.py  verify_agent.py
src/agents/aligners/: llm.py  sparse.py
src/agents/templates/: deep_seek.yml.j2  deep_seek_it.yml.j2  icdcm2_reas.yml.j2  icdcm2_struct.yml.j2  icdcm_cot.yml.j2  icdcm_v2.yml.j2  icdcm_v2_it.yml.j2  icdcm_v2_unconstrained.yml.j2
src/agents/templates/analyse_agent/: base_v0.yml.j2  base_v1.yml.j2  base_v2.yml.j2  base_v3.yml.j2  in_context_v1.yml.j2  in_context_v2.yml.j2  in_context_v3.yml.j2
src/agents/templates/assign_agent/: per_code_v1.yml.j2  per_code_v2.yml.j2  per_code_v3.yml.j2  per_code_v4.yml.j2  reasoning_v1.yml.j2  reasoning_v2.yml.j2  reasoning_v3.yml.j2  reasoning_v4.yml.j2  structured_v1.yml.j2  structured_v2.yml.j2  structured_v3.yml.j2  structured_v4.yml.j2
src/agents/templates/locate_agent/: locate_few_terms.yml.j2  locate_per_lead_v1.yml.j2  locate_struct.yml.j2  locate_v1.yml.j2
src/agents/templates/verify_agent/: one_per_term_v1.yml.j2  one_per_term_v2.yml.j2
src/alignment/: base.py  metrics.py  models.py  ops.py
src/alignment/aligners/: llm.py  sparse.py
src/alignment/aligners/templates/: amo3.yml.j2  binary.yml.j2  dense-no-id-echo.yml.j2  dense-shots-no-it.yml.j2  dense-shots.yml.j2  fine-tune-it.yml.j2  icd_reasoning.yml.j2  icdcm.yml.j2  icdcm_cot_answer.yml.j2  icdcm_v2.yml.j2  icdcm_v2_it.yml.j2  icdcm_v2_it_verbose.yml.j2  loft-it.yml.j2  loft.yml.j2  note2feature.yml.j2
src/dataloader/: __init__.py  base.py  interface.py  mimic_utils.py
src/dataloader/adapt/: base.py  interface.py  utils.py
src/dataloader/adapt/adapters/: __init__.py  mdace.py  meddec.py  mimic.py  mimiciv.py  nbme.py  snomed.py
src/dataloader/adapters/: alignment.py  base.py
src/dataloader/adapters/core/: models.py
src/dataloader/cop-iv/: copiv.py  copiv_icd10.py  copiv_icd9.py  prepare_copiv.py
src/dataloader/loaders/: base.py  nbme_notes.py
src/dataloader/loaders/generators/: nbme_kaggle_dset.py
src/dataloader/loaders/nbme/: constants.py  nbme_notes.py
src/dataloader/loaders/nbme/generators/: nbme_kaggle_dset.py
src/dataloader/mdace/: constants.py  generator.py  mdace_icd9_inpatient.py  mdace_inpatient.py  prepare_mdace.py
src/dataloader/meddec/: generator.py  prepare_meddec.py
src/dataloader/mimic-iii/: mimiciii_50.py  mimiciii_clean.py  prepare_mimiciii.py
src/dataloader/mimic-iv/: mimiciv_icd9.py  prepare_mimiciv.py
src/dataloader/mimiciii/: constants.py  mimiciii_50.py  mimiciii_clean.py  prepare_mimiciii.py
src/dataloader/mimiciv/: constants.py  mimiciv.py  mimiciv_icd10.py  mimiciv_icd9.py  prepare_mimiciv.py
src/dataloader/nbme/: __init__.py  nbme_notes.py
src/dataloader/snomed/: generator.py  prepare_snomed.py
src/finetune/: callback.py  helpers.py  loop.py  monitor.py
src/frontend/: app.py  config.py  errors.py  initial_data.py  models.py
src/frontend/templates/: align.html  index-with-labels.html  index-without-labels.html
src/model/: label_wise_attention.py  utils.py
src/models/: plmicd.py
src/retrieval/: config.py  models.py  negative_sampler.py  plm_icd.py
src/retrieval/plm_icd/: client.py
src/retrieval/qdrant_search/: client.py  factory.py
src/search/qdrant_search/: factory.py  models.py
src/segmenters/: base.py
src/tools/: chrono.py  code_trie.py  exception.py  json_logger.py  lexicon.py  mlflow.py  pbar.py  plotting.py  pprint.py
src/tools/fingerprint/: __init__.py  hashing.py
src/tools/misc/: config.py
src/tools/pretty/: __init__.py  print_batch.py
src/trie/: base.py  icd.py  models.py  xml_utils.py
tests/alignment/: test_nbme_adapter.py
tests/dataloader/adapt/: test_mimic_50.py  test_utils.py
tests/test_alignment/: test_nbme_adapter.py
tests/test_finetune/: test_classification_monitor.py  test_list2tensor.py
