[project]
name = "entityseeker"
version = "0.1.0"
description = "Clinical Entity Linking with Large Language Models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Andreas Geert Motzfeldt", email = "amo@corti.ai" },
    { name = "Valentin Liévin", email = "vli@corti.ai" }
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "transformers>=4.45.2",
    "torch<=2.4.0",
    "lightning>=2.1.2",
    "numba>=0.60.0",
    "peft>=0.7.1",
    "prompt-poet>=0.0.40",
    "tiktoken>=0.7.0",
    "mlflow>=2.15.1",
    "pyahocorasick>=2.1.0",
    "stackprinter>=0.2.12",
    "outlines>=0.1.11",
    "throughster",
]

[dependency-groups]
dataloader = [
    "datasets<2.21.0",
    "polars>=1.15.0",
    "intervaltree>=3.1.0",
    "spacy>=2.2.0,<4.0.0",
]

dev = [
    "rich>=13.7.0",
    "ruff>=0.1.8",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
    "stackprinter>=0.2.11",
    "ipython>=8.26.0",
    "seaborn>=0.13.2",
]

test = [
    "pre-commit>=3.4.0",
    "pytest>=7.4.3",
]

[project.optional-dependencies]
frontend = [
    "flask[async]>=3.0.3",
    "gunicorn>=22.0.0",
]
gpu = [
    "bitsandbytes>=0.43.2",
    "flash-attn<=2.6.2",
]

[tool.uv]
default-groups = ["dev", "dataloader", "test"]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
throughster =  { git = 'https://github.com/MotzWanted/throughster.git', branch = 'dev'}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ERA",
    "PGH",
]
ignore = [
    "F821",
    "F841",
    "D100",
    "D107",
    "D211",
    "D212",
    "S301",
    "S311",
    "S603",
    "S605",
    "S607",
    "B008",
    "B028",
    "B905",
    "COM812",
    "ISC001",
    "TC003",
]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*.pdf,*.ipynb,*.drawio,*.json"
ignore-words-list = ["instanciate"]

[tool.typos.default.extend-identifiers]
arange = "arange"

[tool.typos.default.extend-words]
Ue = "Ue"
Hashi = "Hashi"
