[project]
name = "entityseeker"
version = "0.1.0"
description = "Clinical Entity Linking with Large Language Models"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Andreas Geert Motzfeldt", email = "amo@corti.ai" },
    { name = "Valentin Liévin", email = "vli@corti.ai" }
]
dependencies = [
    "pydantic>=2.11.3",
    "pydantic-settings>=2.2.1",
    "loguru>=0.7.2",
    "torch>=2.4.0",
    "numba>=0.60.0",
    "wandb>=0.19.1",
    "prompt-poet<=0.0.42",
    "throughster",
    "rouge-score>=0.1.2",
    "qdrant-client>=1.4.0",
    "grpcio-tools>=1.60",
    "fastembed>=0.6.1",
    "ranx>=0.3.20",
    "sentence-transformers>=4.1.0",
    "blake3>=1.0.4",
    "cbor2>=5.6.5",
]

[dependency-groups]
trie = [
    "pyahocorasick>=2.1.0",
    "rapidfuzz>=3.13.0",
]

segmenter = [
    "spacy>=2.2.0,<4.0.0",
    "intervaltree>=3.1.0"
]

dataloader = [
    "datasets>=3.3.2",
    "polars>=1.15.0",
]

dev = [
    "rich>=13.7.0",
    "ruff>=0.1.8",
    "ipykernel>=6.28.0",
    "jupyter>=1.0.0",
    "stackprinter>=0.2.11",
    "ipython>=8.26.0",
    "seaborn>=0.13.2",
]

test = [
    "pre-commit>=3.4.0",
    "pytest>=7.4.3",
]

[project.optional-dependencies]
frontend = [
    "flask[async]>=3.0.3",
    "gunicorn>=22.0.0",
]
training = [
    "transformers>=4.48.3",
    "lightning>=2.1.3",
    "bitsandbytes>=0.43.2",
    "flash-attn>=2.6.3",
    # "xformers>=0.0.28.post3",
    # "unsloth==2025.3.8",
    # "unsloth_zoo>=2025.3.7",
    # "trl==0.15.2",
    "vllm==0.7.3",
    "peft>=0.14.0",
    "outlines>=0.1.11",
    "diffusers>=0.32.2"
]

[tool.uv]
default-groups = ["dev", "dataloader", "test", "trie", "segmenter"]
no-build-isolation-package = ["flash-attn", "xformers"]

[tool.uv.sources]
throughster =  { git = 'https://github.com/MotzWanted/throughster.git', branch = 'dev'}

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ERA",
    "PGH",
]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
skip = "*.pdf,*.ipynb,*.drawio,*.json"
ignore-words-list = ["instanciate"]

[tool.typos.default.extend-identifiers]
arange = "arange"

[tool.typos.default.extend-words]
Ue = "Ue"
Hashi = "Hashi"
